--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ workspace/*
 distillation/workspace/
 .vscode
 eval_metrics/tmp
+eval_metrics/cache
 result
 
 # Byte-compiled / optimized / DLL files
